[tool.poetry]
name = "alienator"
version = "0.1.0"
description = "Aliantor"
authors = ["johnpetros <joaopedro.nc@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"

[tool.poetry.scripts]
my-script = "src.app:create_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
